--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -20,7 +20,7 @@
 
       <span class="spacer"></span>
 
-      <span class="version">v0.9.9</span>
+      <!-- <span class="version">v0.9.9</span> -->
 
 
       <a routerLink="about">
