--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -75,7 +75,7 @@
 }
 
 .spacer {
-  height: 100px;
+  height: 64px;
 }
 
 .juz-grid-section,
@@ -213,4 +213,16 @@
   background: $primary-color;
 
   left: 16px;
+}
+
+.update-task-wrapper {
+  .mat-form-field-wrapper {
+    // padding: 0;
+  }
+}
+
+mat-panel-title {
+  mat-icon {
+    margin-inline-start: 4px;
+  }
 }
