--- a/khitma/src/app/shared/group-members/group-members.component.html
+++ b/khitma/src/app/shared/group-members/group-members.component.html
@@ -1,6 +1,6 @@
 <section *ngIf="members">
 
-    <mat-card *ngFor="let member of members" class="member"
+    <mat-card *ngFor="let member of members" (click)="memberClicked(member)" class="member"
         [ngClass]="member.isTaskDone ? 'task-done' : 'task-not-done'">
 
         <label class="name">{{member.name}}</label>
