--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -46,10 +46,10 @@
 
         <a mat-raised-button color="accent" class="block large action-btn" routerLink="/new">مجموعة جديدة</a>
 
-        <!-- <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
+        <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
             style="background-color: #011c2f;">ختمة
             رمضان العالميّة
-        </a> -->
+        </a>
 
     </div>
 
