--- a/khitma/src/app/shared/todo/todo.component.html
+++ b/khitma/src/app/shared/todo/todo.component.html
@@ -32,7 +32,11 @@
             <use xlink:href="#todo__circle" class="todo__circle"></use>
         </svg>
 
-        <div class="todo__text">{{text}}</div>
+        <div class="todo__text">
+
+            <ng-content select="[content]"></ng-content>
+
+        </div>
 
     </label>
 
