--- a/khitma/src/app/shared/todo/todo.component.scss
+++ b/khitma/src/app/shared/todo/todo.component.scss
@@ -11,7 +11,8 @@
 .todo {
     display: block;
     position: relative;
-    padding: 1em 1em 1em 16%;
+    // padding: 1em 1em 1em 16%;
+    padding: 1em 16% 1em 1em; // RTL
     margin: 0 auto;
     cursor: pointer;
     border-bottom: solid 1px #ddd;
@@ -42,7 +43,14 @@
     stroke-width: 2;
     stroke-linejoin: round;
     stroke-linecap: round;
+
+    transform: scale(-1, 1); // RTL
 }
+
+#todo__check {
+    // transform: scale(-1, 1);
+}
+
 .todo__line,
 .todo__box,
 .todo__check {
@@ -121,4 +129,20 @@
 .todo__state:checked ~ .todo__icon .todo__circle {
     -webkit-animation-name: explode;
     animation-name: explode;
+}
+
+:host.dark {
+    .todo__text {
+        color: #5ebec1;
+        transition: all 0.4s linear 0.4s;
+    }
+
+    .todo-list {
+        background: transparent; // rgba(255, 255, 255, 0.15);
+        font-size: 20px;
+        max-width: 15em;
+        margin: auto;
+        padding: 0.5em 1em;
+        box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+    }
 }
