--- a/khitma/src/app/dialog/edit-khitma-details/edit-khitma-details.component.html
+++ b/khitma/src/app/dialog/edit-khitma-details/edit-khitma-details.component.html
@@ -25,7 +25,7 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill" class="block">
-            <mat-label>وقت التسليم</mat-label>
+            <mat-label>موعد التسليم</mat-label>
             <input matInput [(ngModel)]="group.targetDate" name="target-date" autocomplete="off">
         </mat-form-field>
 
