--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -158,8 +158,8 @@ section > p {
 }
 
 .tip {
-  background: lighten($primary-color, 50%);
-  color: $primary-color;
+  background: lighten($admin-color, 50%);
+  color: $admin-color;
   padding: 16px;
   border-radius: 4px;
   display: block;
