--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -47,7 +47,9 @@
         <a mat-raised-button color="accent" class="block large action-btn" routerLink="/new">مجموعة جديدة</a>
 
         <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
-            style="background-color: #011c2f;">ختمة
+            style="background-color: #011c2f;">
+            <mat-icon style="transform: rotate(-23deg);color: gold;">nightlight_round</mat-icon>
+            ختمة
             رمضان العالميّة
         </a>
 
